--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,33 @@
-# Compiled Object files, Static and Dynamic libs (Shared Objects)
-*.o
-*.a
-*.so
+# History files
+.Rhistory
+.Rapp.history
 
-# Folders
-_obj
-_test
+# Session Data files
+.RData
 
-# Architecture specific extensions/prefixes
-*.[568vq]
-[568vq].out
+# Example code in package build process
+*-Ex.R
 
-*.cgo1.go
-*.cgo2.c
-_cgo_defun.c
-_cgo_gotypes.go
-_cgo_export.*
+# Output files from R CMD build
+/*.tar.gz
 
-_testmain.go
+# Output files from R CMD check
+/*.Rcheck/
 
-*.exe
-*.test
-*.prof
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+/*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
